--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+h1{
+    color: red;
+}
+
+@media (min-width: 992px){
+    .menu{
+        justify-content: space-around;
+    }
+}
+
+.search{
+    display: flex;
+}
+
+.search-boton{
+    margin-left: 20px;
+}
