--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,29 @@
-.texto{
+.titulo-producto{
     font-size: 20px;
     font-weight: bolder;
+    text-align: left;
+}
+
+.texto{
+    text-align: left;
 }
 
 
+.precio-1{
+    text-decoration:line-through;
+    text-align: left;
+    color: red;
+    font-weight: bold;
+}
+
+.precio-2{
+    text-align: left;
+    font-weight: bold;
+}
+
+p.precio-1{
+    margin: 0;
+}
 
 @media (min-width: 992px){
     .menu{
