--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,48 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>TechSells</title>
+</head>
+<body>
+  <body>
+    <!-- Banner promocional -->
+    <div class="image">
+     <h2 style="height: 7rem; margin-left: 10rem; padding-top: 50px;">Promosiones de día</h2>
+     <p style="height: 7rem; margin-left: 10rem; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Quisque sit amet laoreet leo, at scelerisque dolor. Vivamus nec nulla sed arcu feugiat aliquam. </p>
+   </div>
+   <div class="container text-center">
+     <div class="row align-items-start">
+       <div class="col">
+         <img src="./assets/1068210-800-600.jpg" alt="Iphone" style="width: 100%;">
+        <p class="texto">Apple</p>
+        <p class="titulo-producto"> iPhone 11 128 GB 4GB RAM | Pantalla 6.1 Pulgadas | Chip A13 Bionic | Camara 12 MP</p>
+        <p class="texto"> Por Alkosto</p>
+        <p class="precio-1"> 2.549.900  </p>
+        <p class="precio-2"> 2.130.900 ¡Descuento! </p>
+        <a routerLink="/iphone">ver más</a>
+     
+       </div>
+       <div class="col">
+         <img src="./assets/69514525_1.avif" alt="Huawei" style="width: 75%;">
+        <p class="texto">Huawei</p>
+        <p class="titulo-producto"> Celular Huawei Y91 256GB</p>
+        <p class="texto"> Por Falabella</p>
+        <p class="precio-1"> 1.599.900  </p>
+        <p class="precio-2"> 999.900 ¡Descuento! </p>
+       </div>
+       <div class="col">
+         <img src="./assets/gsc_126983677_4763559_1.jpg" alt="Realme" style="width: 75%;">
+        <p class="texto">Realme</p>
+        <p class="titulo-producto"> Celular Realme C53 128gb 6gb Ram Dual Sim Dorado</p>
+        <p class="texto"> Por Ktronix</p>
+        <p class="precio-1"> 569.900  </p>
+        <p class="precio-2"> 549.900 ¡Descuento! </p>
+       </div>
+     </div>
+   </div>
+ </body>
+</body>
+</html>
